# db-catalog

./: README.md  docker-compose.yml
.devcontainer/backend-container/: devcontainer.json
.devcontainer/frontend-container/: devcontainer.json
backend/: .env  pyproject.toml
backend/backend/: config.py  main.py
backend/backend/repository/: base_repository.py  column_relation.py  model.py  model_column.py  project.py  view.py
backend/backend/service/: catalog.py
backend/tests/integration/: repository_project_test.py
